test-framework/sudo-compliance-tests/src/sudo/flag_list/long_format/snapshots/command_alias.snap
---
source: sudo-compliance-tests/src/sudo/flag_list/long_format/mod.rs
assertion_line: 131
expression: stdout
---
User root may run the following commands on container:

Sudoers entry:
    RunAsUsers: root
    Commands:
	/bin/ls
	/usr/bin/true
	/usr/bin/false
