test-framework/sudo-compliance-tests/src/sudo/flag_list/long_format/snapshots/cwd_override_across_runas_groups.snap
---
source: sudo-compliance-tests/src/sudo/flag_list/long_format/mod.rs
assertion_line: 227
expression: stdout
---
User root may run the following commands on container:

Sudoers entry:
    RunAsUsers: root
    Cwd: *
    Commands:
	/usr/bin/true

Sudoers entry:
    RunAsUsers: ferris
    Cwd: *
    Commands:
	/usr/bin/false

Sudoers entry:
    RunAsUsers: ferris
    Cwd: /home
    Commands:
	/bin/ls
