test-framework/sudo-compliance-tests/src/sudo/flag_list/long_format/snapshots/multiple_lines.snap
---
source: sudo-compliance-tests/src/sudo/flag_list/long_format/mod.rs
assertion_line: 302
expression: stdout
---
User root may run the following commands on container:

Sudoers entry:
    RunAsUsers: root
    Commands:
	/usr/bin/true
	/usr/bin/false

Sudoers entry:
    RunAsUsers: root
    Commands:
	/bin/ls
