test-framework/sudo-compliance-tests/src/sudo/flag_list/long_format/snapshots/nopasswd_passwd_override_across_runas_groups.snap
---
source: sudo-compliance-tests/src/sudo/flag_list/long_format/mod.rs
assertion_line: 285
expression: stdout
---
User root may run the following commands on container:

Sudoers entry:
    RunAsUsers: root
    Options: !authenticate
    Commands:
	/usr/bin/true

Sudoers entry:
    RunAsUsers: ferris
    Options: !authenticate
    Commands:
	/usr/bin/false

Sudoers entry:
    RunAsUsers: ferris
    Options: authenticate
    Commands:
	/bin/ls
